--- a/src/css/ovenplayer.less
+++ b/src/css/ovenplayer.less
@@ -22,6 +22,9 @@
   font-weight: normal;
   outline: 0;
 
+  object{
+    width:100%; height:100%;
+  }
 
 
   &:before, &:after {
@@ -496,7 +499,7 @@
     display: none;
     position: absolute;
     bottom: 15px;
-    left: 0;
+    left: auto;
     width: auto;
     background-color: rgba(28,28,28,0.9);
     border-radius: 2px;
