--- a/src/css/ovenplayer.less
+++ b/src/css/ovenplayer.less
@@ -4,7 +4,7 @@
  * @brief   common style
  * */
 
-.ovp-wrapper {
+.ovp-wrapper.ovenplayer {
   position: relative;
   max-height: 100%;
   overflow: hidden;
@@ -17,14 +17,13 @@
   box-sizing: border-box;
   color: #eee;
   font-family: 'Noto Sans', sans-serif;
-  font-size: 11px;
+  font-size: 1rem;
   line-height: 1.3;
   font-weight: normal;
   outline: 0;
 
   object{
     width:100%; height:100%;
-
   }
 
   &:before, &:after {
@@ -58,6 +57,8 @@
   .ovp-ratio {
     padding-bottom: 56.25%; /*16:9*/
   }
+
+
 }
 
 .ovp-player {
@@ -130,55 +131,68 @@
 
 .ovp-spinner-container {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: none;
+  top: 50%;
+  width: 64px;
+  left: 50%;
+  margin-left: -32px;
+  margin-top: -32px;
+  z-index: 100000;
+  display : none;
 
-  .ovp-spinner {
-    width: 70px;
-    height: 18px;
+  .lds-ellipsis {
+    display: inline-block;
+    position: relative;
+    width: 64px;
+    height: 11px;
+  }
+  .lds-ellipsis div {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -9px;
-    margin-left: -35px;
-    text-align: center;
-
-    & > div {
-      width: 18px;
-      height: 18px;
-      background-color: #50e3c2;
-
-      border-radius: 100%;
-      display: inline-block;
-      -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-      animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-    }
-
-    .bounce1 {
-      -webkit-animation-delay: -0.32s;
-      animation-delay: -0.32s;
-    }
-    .bounce2 {
-      -webkit-animation-delay: -0.16s;
-      animation-delay: -0.16s;
-    }
+    top: 27px;
+    width: 11px;
+    height: 11px;
+    border-radius: 50%;
+    background-color: #50e3c2;
+    animation-timing-function: cubic-bezier(0, 1, 1, 0);
   }
-
-  @-webkit-keyframes sk-bouncedelay {
-    0%, 80%, 100% { -webkit-transform: scale(0) }
-    40% { -webkit-transform: scale(1.0) }
+  .lds-ellipsis div:nth-child(1) {
+    left: 6px;
+    animation: lds-ellipsis1 0.6s infinite;
   }
-  @keyframes sk-bouncedelay {
-    0%, 80%, 100% {
-      -webkit-transform: scale(0);
+  .lds-ellipsis div:nth-child(2) {
+    left: 6px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(3) {
+    left: 26px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(4) {
+    left: 45px;
+    animation: lds-ellipsis3 0.6s infinite;
+  }
+  @keyframes lds-ellipsis1 {
+    0% {
       transform: scale(0);
-    } 40% {
-        -webkit-transform: scale(1.0);
-        transform: scale(1.0);
-      }
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes lds-ellipsis3 {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(0);
+    }
+  }
+  @keyframes lds-ellipsis2 {
+    0% {
+      transform: translate(0, 0);
+    }
+    100% {
+      transform: translate(19px, 0);
+    }
   }
 }
 
@@ -201,7 +215,7 @@
     text-align: center;
 
     .ovp-message-text {
-      font-size: 140%;
+      font-size: 1.1rem;
       background-color: rgba(0,0,0,0.5);
       color: #fff;
       padding: .1em .3em;
@@ -217,13 +231,8 @@
  * */
 
 .ovp-bigbutton-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-
   .ovp-bigbutton {
+    cursor: pointer;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -258,10 +267,12 @@
 .ovp-setting-panel {
   position: absolute;
   bottom: 55px;
+
   right: 12px;
   overflow-y : auto;
+  max-height:100%;
   width: 260px;
-  font-size: 120%;
+  font-size: 0.8rem;
   user-select: none;
   background-color: rgba(28,28,28,.9);
   text-shadow: 0 0 2px rgba(0,0,0,.5);
@@ -279,6 +290,7 @@
     .ovp-setting-title{
       .ovp-setting-title-title {
         padding-left: 12px;
+        font-size: 0.9rem;
       }
       .ovp-setting-title-previcon {
         padding: 0 0 0 12px;
@@ -499,7 +511,7 @@
     background-color: rgba(28,28,28,0.9);
     border-radius: 2px;
     padding: 5px 9px;
-    font-size: 118%;
+    font-size: 0.8rem;
     line-height: 15px;
     user-select: none;
   }
@@ -678,7 +690,7 @@
   white-space: nowrap;
   line-height: 30px;
   vertical-align: top;
-  font-size: 14px;
+  font-size: 1rem;
   user-select: none; /*흠 이부분 어떻게 처리하지*/
 
   .ovp-time-current,
@@ -691,8 +703,6 @@
     opacity: 1;
     width: auto;
     display: inline-block;
-    width: auto;
-    font-size: 14px;
 
     &:before {
       background: #ff0000;
@@ -732,8 +742,7 @@
   text-shadow: 0 0 2px rgba(0,0,0,.5);
   z-index: 2300;
   font-family: Roboto,Arial,Helvetica,sans-serif;
-  font-size: 11px;
-  font-weight: 100;
+  font-weight : lighter;
   user-select: none;
 
   &:before, &:after {
@@ -755,7 +764,8 @@
     color: #eee;
     cursor: pointer;
     outline: none;
-    font-size: 120%;
+    font-size: 0.8rem;
+    font-weight: lighter;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
