--- a/src/css/ovenplayer.less
+++ b/src/css/ovenplayer.less
@@ -216,11 +216,12 @@
 
     .ovp-message-text {
       font-size: 1.1rem;
-      background-color: rgba(0,0,0,0.5);
+      background-color: rgba(28,28,28,.7);
+      text-shadow: 0 0 2px rgba(0,0,0,.5);
       color: #fff;
-      padding: .1em .3em;
+      padding: 1rem 3rem;
       word-wrap: break-word;
-      line-height: 1.5em;
+      line-height: 1.5rem;
     }
   }
 }
@@ -267,7 +268,6 @@
 .ovp-setting-panel {
   position: absolute;
   bottom: 55px;
-
   right: 12px;
   overflow-y : auto;
   max-height:100%;
@@ -277,6 +277,10 @@
   background-color: rgba(28,28,28,.9);
   text-shadow: 0 0 2px rgba(0,0,0,.5);
 
+  opacity: .6;
+  &.front{
+    opacity: 1;
+  }
   .ovp-setting-title, .ovp-setting-item {
     width: 100%;
     height: 38px;
@@ -290,7 +294,7 @@
     .ovp-setting-title{
       .ovp-setting-title-title {
         padding-left: 12px;
-        font-size: 0.9rem;
+        //font-size: 0.9rem;
       }
       .ovp-setting-title-previcon {
         padding: 0 0 0 12px;
@@ -317,12 +321,6 @@
       span.ovp-setting-item-value {
         float: right;
         padding-right: 12px;
-      }
-    }
-
-    .ovp-setting-item.ovp-setting-sub-item{
-      .ovp-setting-item-title {
-        margin-left: -6px;
       }
       .ovp-setting-item-checked {
         padding-left: 12px;
@@ -1004,6 +1002,37 @@
       -webkit-transition: none !important;
       transition: none !important;
     }
+  }
+
+  @-webkit-keyframes slideInUp {
+    from {
+      -webkit-transform: translate3d(0, 100%, 0);
+      transform: translate3d(0, 100%, 0);
+      visibility: visible;
+    }
+
+    to {
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  @keyframes slideInUp {
+    from {
+      -webkit-transform: translate3d(0, 100%, 0);
+      transform: translate3d(0, 100%, 0);
+      visibility: visible;
+    }
+
+    to {
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  .slideInUp {
+    -webkit-animation-name: slideInUp;
+    animation-name: slideInUp;
   }
 }
 
