--- a/src/css/ovenplayer.less
+++ b/src/css/ovenplayer.less
@@ -1,4 +1,57 @@
 @charset "UTF-8";
+/**
+ * @brief   Animation
+ * */
+@-webkit-keyframes slideOutDown {
+  from {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  to {
+    visibility: hidden;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+}
+
+@keyframes slideOutDown {
+  from {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  to {
+    visibility: hidden;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+}
+@-webkit-keyframes slideInUp {
+  from {
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+    opacity: 1;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slideInUp {
+  from {
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+    opacity: 1;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
 
 /**
  * @brief   common style
@@ -43,8 +96,15 @@
   &.ovp-autohide{
     cursor: none;
 
-    .ovp-gradient-top, .ovp-gradient-bottom, .ovp-bottom-panel{
-      opacity: 0;
+    .ovp-bottom-panel{
+
+      -webkit-animation-name: slideOutDown;
+      animation-name: slideOutDown;
+
+      -webkit-animation-duration: 0.2s;
+      animation-duration: 0.2s;
+      -webkit-animation-fill-mode: both;
+      animation-fill-mode: both;
     }
     .ovp-progressbar-container, .ovp-controls .ovp-button{
       cursor: none;
@@ -107,94 +167,8 @@
   }
 }
 
-.ovp-gradient-top, .ovp-gradient-bottom {
-  width: 100%;
-  position: absolute;
-  background-color: #12121c;
-  pointer-events: none;
-  opacity: 0.3;
-  -moz-transition: opacity .25s cubic-bezier(0.0,0.0,0.2,1);
-  -webkit-transition: opacity .25s cubic-bezier(0.0,0.0,0.2,1);
-  transition: opacity .25s cubic-bezier(0.0,0.0,0.2,1);
-}
-
-.ovp-gradient-bottom {
-  height: 50px;
-  bottom: 0;
-  z-index: 22;
-}
 
 
-/**
- * @brief   spinner
- * */
-
-.ovp-spinner-container {
-  position: absolute;
-  top: 50%;
-  width: 64px;
-  left: 50%;
-  margin-left: -32px;
-  margin-top: -32px;
-  z-index: 100000;
-  display : none;
-
-  .lds-ellipsis {
-    display: inline-block;
-    position: relative;
-    width: 64px;
-    height: 11px;
-  }
-  .lds-ellipsis div {
-    position: absolute;
-    top: 27px;
-    width: 11px;
-    height: 11px;
-    border-radius: 50%;
-    background-color: #50e3c2;
-    animation-timing-function: cubic-bezier(0, 1, 1, 0);
-  }
-  .lds-ellipsis div:nth-child(1) {
-    left: 6px;
-    animation: lds-ellipsis1 0.6s infinite;
-  }
-  .lds-ellipsis div:nth-child(2) {
-    left: 6px;
-    animation: lds-ellipsis2 0.6s infinite;
-  }
-  .lds-ellipsis div:nth-child(3) {
-    left: 26px;
-    animation: lds-ellipsis2 0.6s infinite;
-  }
-  .lds-ellipsis div:nth-child(4) {
-    left: 45px;
-    animation: lds-ellipsis3 0.6s infinite;
-  }
-  @keyframes lds-ellipsis1 {
-    0% {
-      transform: scale(0);
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
-  @keyframes lds-ellipsis3 {
-    0% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(0);
-    }
-  }
-  @keyframes lds-ellipsis2 {
-    0% {
-      transform: translate(0, 0);
-    }
-    100% {
-      transform: translate(19px, 0);
-    }
-  }
-}
 
 
 /**
@@ -345,18 +319,32 @@
     left: 0px;
     right: 0px;
     bottom: 0px;
-    height: 50px;
+    height: 54px;
     z-index: 60;
 
-    -moz-transition: opacity .25s cubic-bezier(0.0,0.0,0.2,1);
-    -webkit-transition: opacity .25s cubic-bezier(0.0,0.0,0.2,1);
-    transition: opacity .25s cubic-bezier(0.0,0.0,0.2,1);
+    .ovp-gradient-bottom {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-color: #12121c;
+      pointer-events: none;
+      opacity: 0.3;
+      /*-moz-transition: opacity .25s cubic-bezier(0.0,0.0,0.2,1);
+      -webkit-transition: opacity .25s cubic-bezier(0.0,0.0,0.2,1);
+      transition: opacity .25s cubic-bezier(0.0,0.0,0.2,1);*/
+    }
+    -webkit-animation-name: slideInUp;
+    animation-name: slideInUp;
+
+    -webkit-animation-duration: 0.5s;
+    animation-duration: 0.5s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
 
     .ovp-progressbar-container {
       display: block;
-      position: absolute;
+      position: relative;
       width: 100%;
-      bottom: 50px;
       height: 4px;
       cursor: pointer;
 
@@ -372,12 +360,11 @@
 
     /*contols container*/
     .ovp-controls {
-      position: absolute;
-      bottom: 0;
+      position: relative;
       width: 100%;
       height: 50px;
       text-align: left;
-
+      z-index: 23;
       .ovp-button {
         min-width: 30px;
         height: 30px;
@@ -802,6 +789,78 @@
 }
 
 /**
+ * @brief   spinner
+ * */
+
+.ovp-spinner-container {
+  position: absolute;
+  top: 50%;
+  width: 64px;
+  left: 50%;
+  margin-left: -32px;
+  margin-top: -32px;
+  z-index: 100000;
+  display : none;
+
+  .lds-ellipsis {
+    display: inline-block;
+    position: relative;
+    width: 64px;
+    height: 11px;
+  }
+  .lds-ellipsis div {
+    position: absolute;
+    top: 27px;
+    width: 11px;
+    height: 11px;
+    border-radius: 50%;
+    background-color: #50e3c2;
+    animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  }
+  .lds-ellipsis div:nth-child(1) {
+    left: 6px;
+    animation: lds-ellipsis1 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(2) {
+    left: 6px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(3) {
+    left: 26px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(4) {
+    left: 45px;
+    animation: lds-ellipsis3 0.6s infinite;
+  }
+  @keyframes lds-ellipsis1 {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes lds-ellipsis3 {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(0);
+    }
+  }
+  @keyframes lds-ellipsis2 {
+    0% {
+      transform: translate(0, 0);
+    }
+    100% {
+      transform: translate(19px, 0);
+    }
+  }
+}
+
+
+/**
  * @brief   Animation
  * */
 
@@ -1002,37 +1061,6 @@
       -webkit-transition: none !important;
       transition: none !important;
     }
-  }
-
-  @-webkit-keyframes slideInUp {
-    from {
-      -webkit-transform: translate3d(0, 100%, 0);
-      transform: translate3d(0, 100%, 0);
-      visibility: visible;
-    }
-
-    to {
-      -webkit-transform: translate3d(0, 0, 0);
-      transform: translate3d(0, 0, 0);
-    }
-  }
-
-  @keyframes slideInUp {
-    from {
-      -webkit-transform: translate3d(0, 100%, 0);
-      transform: translate3d(0, 100%, 0);
-      visibility: visible;
-    }
-
-    to {
-      -webkit-transform: translate3d(0, 0, 0);
-      transform: translate3d(0, 0, 0);
-    }
-  }
-
-  .slideInUp {
-    -webkit-animation-name: slideInUp;
-    animation-name: slideInUp;
   }
 }
 
