--- a/src/css/ovenplayer.less
+++ b/src/css/ovenplayer.less
@@ -1076,15 +1076,11 @@
 
 
 /**
- * @brief   caption. not use
+ * @brief   caption.
  * */
 
 .ovp-caption-viewer {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+
   .ovp-caption-text-container {
     position: absolute;
     bottom: 60px;
@@ -1095,15 +1091,14 @@
     -webkit-transition: bottom .25s cubic-bezier(0.0,0.0,0.2,1);
     transition: bottom .25s cubic-bezier(0.0,0.0,0.2,1);
     .ovp-caption-text {
-      display: none;
-      font-size: 220%;
-      background-color: rgba(8, 8, 8, 0.75);
-      border-radius: 3px;
+      font-size: 2rem;
+      text-shadow: 2px 2px 2px gray;
       color: #fff;
-      padding: .1em .3em;
-      word-wrap: break-word;
-      line-height: 1.5em;
+      padding: .1rem .3rem;
+      line-height: 2.6rem;
       user-select: none;
+      word-break: break-word;
+      white-space: initial;
     }
   }
 }
