Improved UI Setting Panel when you run on low resolution.

--- a/src/css/ovenplayer.less
+++ b/src/css/ovenplayer.less
@@ -1154,12 +1154,13 @@
     .ovp-caption-text {
       font-size: 1rem;
       line-height: 1rem;
-
       text-shadow: 2px 2px 2px gray;
       color: #fff;
       padding: .1rem .3rem;
       user-select: none;
       word-break: break-word;
+      white-space: pre-line;
+
     }
   }
 }
