--- a/src/css/ovenplayer.less
+++ b/src/css/ovenplayer.less
@@ -134,22 +134,30 @@
 .ovp-player {
   position: absolute;
   top: 0;
-  bottom: 0;
   width: 100%;
-  //height: 100%;
+  height: 100%;
   .ovp-media-element-container {
     display: block;
-    /*position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;*/
     height: 100%;
     width: 100%;
-    & > *{
+    video {
+      width: 100%;
+     /* height : 100%;
+      position: absolute;
+      top: 0;
+      left: 0;*/
+    }
+    object {
+     /* position: absolute;
+      top: 0;
+      left: 0;*/
+      width: 100%;
+      height : 100%;
+    }
+    /*& > *{
       width: 100%;
       height: 100%;
-    }
+    }*/
   }
 
   .ovp-ui {
@@ -431,6 +439,7 @@
           margin-right: 6px;
           position: relative;
           text-align: center;
+          color : #fff;
           .frame-icon{
             position: relative;
 
