--- a/src/css/ovenplayer.less
+++ b/src/css/ovenplayer.less
@@ -146,6 +146,11 @@
       position: absolute;
       top: 0;
       left: 0;*/
+      //background:transparent url('parrots.jpg') no-repeat 0 0;
+      /*-webkit-background-size:cover !important;
+      -moz-background-size:cover !important;
+      -o-background-size:cover !important;
+      background-size:cover !important;*/
     }
     object {
      /* position: absolute;
