--- a/src/css/ovenplayer.less
+++ b/src/css/ovenplayer.less
@@ -139,30 +139,12 @@
   .ovp-media-element-container {
     display: block;
     height: 100%;
-    width: 100%;
-    video {
-      width: 100%;
-     /* height : 100%;
-      position: absolute;
-      top: 0;
-      left: 0;*/
-      //background:transparent url('parrots.jpg') no-repeat 0 0;
-      /*-webkit-background-size:cover !important;
-      -moz-background-size:cover !important;
-      -o-background-size:cover !important;
-      background-size:cover !important;*/
-    }
-    object {
-     /* position: absolute;
-      top: 0;
-      left: 0;*/
-      width: 100%;
-      height : 100%;
-    }
-    /*& > *{
+    width : auto;
+
+    & > *{
       width: 100%;
       height: 100%;
-    }*/
+    }
   }
 
   .ovp-ui {
