--- a/src/css/ovenplayer.less
+++ b/src/css/ovenplayer.less
@@ -134,17 +134,28 @@
 .ovp-player {
   position: absolute;
   top: 0;
-  width: 100%;
   height: 100%;
+  width : 100%;
   .ovp-media-element-container {
     display: block;
     height: 100%;
-    width : auto;
-
-    & > *{
+    width: auto;
+    /*& > *{
       width: 100%;
       height: 100%;
+    }*/
+    video {
+      width: 100%;
+      height : 100%;
     }
+    object {
+      width: 100%;
+      height : 100%;
+    }
+    /*& > *{
+      width: 100%;
+      height: 100%;
+    }*/
   }
 
   .ovp-ui {
