Updated error management

--- a/src/css/ovenplayer.less
+++ b/src/css/ovenplayer.less
@@ -524,8 +524,10 @@
     .ovp-play-progress {
       width: 0;
       //z-index: 34;
-      -webkit-transition: width 0.1s ease;
-      transition: width 0.1s ease;
+      -moz-transform-origin: 0 0;
+      -ms-transform-origin: 0 0;
+      -webkit-transform-origin: 0 0;
+      transform-origin: 0 0
     }
     .ovp-load-progress {
       width: 0;
