--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -57,7 +57,6 @@
   src: url("../assets/images/ic-player-frame-jump.eot?rxg7gj");
   src: url("../assets/images/ic-player-frame-jump.eot?rxg7gj#iefix") format('embedded-opentype'),
         url("../assets/images/ic-player-frame-jump.ttf?rxg7gj") format('truetype'),
-//        url("../assets/images/ic-player-frame-jump.woff?rxg7gj") format('woff'),
         url("../assets/images/ic-player-frame-jump.svg?rxg7gj#icomoon") format('svg');
   font-weight: normal;
   font-style: normal;
@@ -66,7 +65,6 @@
   font-family: 'ovp-icons';
   src: url('../assets/fonts/fontello.eot?13010392');
   src: url('../assets/fonts/fontello.eot?13010392#iefix') format('embedded-opentype'),
-    //url('../assets/fonts/fontello.woff?13010392') format('woff'),
   url('../assets/fonts/fontello.ttf?13010392') format('truetype'),
   url('../assets/fonts/fontello.svg?13010392#fontello') format('svg');
   font-weight: normal;
@@ -135,7 +133,6 @@
   .ovp-ratio {
     padding-bottom: 56.25%; /*16:9*/
   }
-
   & ::-webkit-scrollbar {width:5px; height:8px;}
   & ::-webkit-scrollbar-button:start:decrement, ::-webkit-scrollbar-button:end:increment {display: block; height:3px; background:#2f2f3e;}
   & ::-webkit-scrollbar-track {background: #2f2f3e; -webkit-border-radius: 10px; border-radius:10px;}
@@ -151,10 +148,6 @@
     display: block;
     height: 100%;
     width: auto;
-    /*& > *{
-      width: 100%;
-      height: 100%;
-    }*/
     video {
       width: 100%;
       height : 100%;
@@ -163,10 +156,6 @@
       width: 100%;
       height : 100%;
     }
-    /*& > *{
-      width: 100%;
-      height: 100%;
-    }*/
   }
 
   .ovp-ui {
@@ -174,7 +163,17 @@
     .ovp-helpers-container{}
   }
 }
-
+.ovp-ads{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  bottom : 60px;
+  &>div{
+    position: absolute !important;
+    width: 100% !important;
+    height: 100% !important;
+  }
+}
 
 /**
  * @brief   common components
@@ -192,6 +191,12 @@
 
   &:focus, & {
     outline: 0;
+  }
+  & > i {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background-size: 100%;
   }
 }
 
@@ -275,6 +280,7 @@
       margin: 0;
       position: absolute;
       top: 50%;
+      height : 0;
       -ms-transform: translateY(-50%);
       transform: translateY(-50%);
       width: 100%;
@@ -335,6 +341,8 @@
           padding: 0;
           overflow: hidden;
           border : 0.214em solid transparent;
+          background-color: #000;
+
           img{
             position: absolute;
             top: 0;
@@ -343,6 +351,18 @@
             width: 100%;
             height: 100%;
             border: 0;
+          }
+          &.empty {
+            background-color: #bababa;
+            &>i{
+              margin: 0;
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              color : #fff !important;
+              font-size : 1.6em;
+            }
           }
           &::before {
             padding-top: 56.25%;
@@ -557,9 +577,8 @@
       .ovp-progressbar-padding {
         position: absolute;
         width: 100%;
-        height: 16px;
+        height: 4px;
         bottom: 0;
-        //z-index: 28;
       }
     }
 
@@ -570,6 +589,7 @@
       width: 100%;
       height: 50px;
       text-align: left;
+      padding: 10px 0;
       //z-index: 23;
       .ovp-button {
         min-width: 30px;
@@ -578,32 +598,16 @@
       }
       .ovp-setting-button {
         position: relative;
-        top: 10px;
         margin-right: 12px;
-
         & > i{
-          display: inline-block;
-          width: 100%;
-          height: 100%;
-          background-size: 100%;
-          &{
-            background: url('../assets/images/ic-player-setting.svg');
-          }
+          background: url('../assets/images/ic-player-setting.svg');
         }
       }
       .ovp-playlist-button {
         position: relative;
-        top: 10px;
         margin-right: 12px;
-
         & > i{
-          display: inline-block;
-          width: 100%;
-          height: 100%;
-          background-size: 100%;
-          &{
-            background: url('../assets/images/ic-player-playlist.svg');
-          }
+          background: url('../assets/images/ic-player-playlist.svg');
         }
       }
       .ovp-left-controls {
@@ -618,6 +622,7 @@
         height: 100%;
       }
 
+      /*maybe not use*/
       .ovp-frame-buttons {
         position: relative;
         display: inline-block;
@@ -625,7 +630,6 @@
         overflow: hidden;
         font-weight: 100;
         height: 30px;
-        top: 10px;
 
         .ovp-frame-button{
           margin-right: 6px;
@@ -804,20 +808,10 @@
 
 .ovp-play-button  {
   position: relative;
-  top: 10px;
   margin-left: 15px;
-
-  & > i {
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    background-size: 100%;
-  }
-
   .ovp-play-button-playicon {
     background: url('../assets/images/ic-player-play.svg');
   }
-
   .ovp-play-button-pauseicon {
     background: url('../assets/images/ic-player-stop.svg');
   }
@@ -830,26 +824,16 @@
 .ovp-volume-controller {
   display: inline-block;
   position: relative;
-  top: 10px;
   margin-left: 12px;
   height: 30px;
 
   .ovp-volume-button {
-    & > i {
-      display: inline-block;
-      width: 100%;
-      height: 100%;
-      background-size: 100%;
-    }
-
     .ovp-volume-button-bigicon {
       background: url('../assets/images/ic-player-volume.svg');
     }
-
     .ovp-volume-button-smallicon {
       background: url('../assets/images/ic-player-volume-2.svg');
     }
-
     .ovp-volume-button-muteicon {
       background: url('../assets/images/ic-player-volume-mute.svg');
     }
@@ -943,7 +927,6 @@
 .ovp-time-display {
   display: inline-block;
   position: relative;
-  top: 10px;
   margin-left: 14px;
   height: 30px;
   white-space: nowrap;
@@ -974,7 +957,6 @@
       content: '';
       border-radius: 6px;
     }
-
     .ovp-live-badge-lowlatency {
       display: inline-block;
       margin-right: 5px;
@@ -1046,14 +1028,7 @@
 
 .ovp-fullscreen-button {
   position: relative;
-  top: 10px;
   margin-right: 15px;
-  & > i{
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    background-size: 100%;
-  }
   .ovp-fullscreen-button-expandicon {
     background: url('../assets/images/ic-player-fullscreen-expand.svg');
   }
@@ -1076,13 +1051,13 @@
   z-index: 1000;
   display : none;
 
-  .lds-ellipsis {
+  .ovp-ellipsis {
     display: inline-block;
     position: relative;
     width: 64px;
     height: 11px;
   }
-  .lds-ellipsis div {
+  .ovp-ellipsis div {
     position: absolute;
     top: 27px;
     width: 11px;
@@ -1091,19 +1066,19 @@
     background-color: #50e3c2;
     animation-timing-function: cubic-bezier(0, 1, 1, 0);
   }
-  .lds-ellipsis div:nth-child(1) {
+  .ovp-ellipsis div:nth-child(1) {
     left: 6px;
     animation: lds-ellipsis1 0.6s infinite;
   }
-  .lds-ellipsis div:nth-child(2) {
+  .ovp-ellipsis div:nth-child(2) {
     left: 6px;
     animation: lds-ellipsis2 0.6s infinite;
   }
-  .lds-ellipsis div:nth-child(3) {
+  .ovp-ellipsis div:nth-child(3) {
     left: 26px;
     animation: lds-ellipsis2 0.6s infinite;
   }
-  .lds-ellipsis div:nth-child(4) {
+  .ovp-ellipsis div:nth-child(4) {
     left: 45px;
     animation: lds-ellipsis3 0.6s infinite;
   }
@@ -1132,6 +1107,156 @@
     }
   }
 }
+
+
+/**
+ * @brief   caption.
+ * */
+
+.ovp-caption-viewer {
+
+  .ovp-caption-text-container {
+    position: absolute;
+    bottom: 60px;
+    width: 100%;
+    padding: 0 12px;
+    text-align: center;
+    -moz-transition: bottom .25s cubic-bezier(0.0,0.0,0.2,1);
+    -webkit-transition: bottom .25s cubic-bezier(0.0,0.0,0.2,1);
+    transition: bottom .25s cubic-bezier(0.0,0.0,0.2,1);
+    .ovp-caption-text {
+      font-size: 1em;
+      line-height: 1.2em;
+      text-shadow: 2px 2px 2px gray;
+      color: #fff;
+      padding: .1em .3em;
+      user-select: none;
+      word-break: break-word;
+      white-space: pre-line;
+
+    }
+  }
+}
+
+.ovp-caption-button {
+  width: 36px;
+}
+
+.ovp-caption-button > i {
+  font-size: 18px;
+  -moz-transition: color .25s cubic-bezier(0.0,0.0,0.2,1);
+  -webkit-transition: color .25s cubic-bezier(0.0,0.0,0.2,1);
+  transition: color .25s cubic-bezier(0.0,0.0,0.2,1);
+}
+
+.ovp-caption-active .ovp-caption-button > i {
+  color: #F36446;
+}
+
+
+
+/*Responsive  */
+
+.ovp-wrapper.ovenplayer.large{
+  font-size : 14px;
+  .ovp-caption-text{
+    font-size : 2em;
+    line-height : 2em;
+  }
+
+}
+.ovp-wrapper.ovenplayer.medium{
+  font-size : 12px;
+  .ovp-caption-text{
+    font-size : 1.4em;
+    line-height : 1.4em;
+  }
+}
+.ovp-wrapper.ovenplayer.small{
+  font-size : 10px;
+  .ovp-caption-text{
+    font-size : 1.4em;
+    line-height : 1.4em;
+  }
+  .ovp-playlist{
+    padding : 1rem;
+
+  }
+
+}
+.ovp-wrapper.ovenplayer.xsmall{
+  font-size : 8px;
+  .ovp-caption-text{
+    font-size : 1.4em;
+    line-height : 1.4em;
+  }
+  .ovp-playlist{
+    padding : 1rem;
+    .ovp-playlist-card{
+      -ms-flex: 0 0 100%;
+      flex: 0 0 100%;
+      max-width: 100%;
+      padding : 0 40px;
+    }
+  }
+
+}
+
+/*AD MODE*/
+.ovp-wrapper.ovenplayer.linear-ad{
+  .ovp-bottom-panel{
+    height : 34px;
+    .ovp-controls{
+      height: 30px;
+      padding : 0;
+    }
+  }
+  .ovp-ads{
+    top: 0;
+    bottom : 0;
+  }
+  .ovp-setting-button{
+    & > i{
+      background: url('../assets/images/small/ic-player-setting.svg');
+    }
+  }
+  .ovp-playlist-button{
+    & > i{
+      background: url('../assets/images/small/ic-player-playlist.svg');
+    }
+  }
+  .ovp-play-button{
+    .ovp-play-button-playicon {
+      background: url('../assets/images/small/ic-player-play.svg');
+    }
+    .ovp-play-button-pauseicon {
+      background: url('../assets/images/small/ic-player-stop.svg');
+    }
+  }
+  .ovp-volume-button{
+    .ovp-volume-button-bigicon {
+      background: url('../assets/images/small/ic-player-volume.svg');
+    }
+    .ovp-volume-button-smallicon {
+      background: url('../assets/images/small/ic-player-volume-2.svg');
+    }
+    .ovp-volume-button-muteicon {
+      background: url('../assets/images/small/ic-player-volume-mute.svg');
+    }
+  }
+  .ovp-fullscreen-button{
+    .ovp-fullscreen-button-expandicon {
+      background: url('../assets/images/small/ic-player-fullscreen-expand.svg');
+    }
+    .ovp-fullscreen-button-compressicon {
+      background: url('../assets/images/small/ic-player-fullscreen-compress.svg');
+    }
+  }
+}
+
+
+
+
 
 
 /**
@@ -1336,142 +1461,23 @@
       transition: none !important;
     }
   }
-}
 
 
-
-/**
- * @brief   caption.
- * */
-
-.ovp-caption-viewer {
-
-  .ovp-caption-text-container {
-    position: absolute;
-    bottom: 60px;
-    width: 100%;
-    padding: 0 12px;
-    text-align: center;
-    -moz-transition: bottom .25s cubic-bezier(0.0,0.0,0.2,1);
-    -webkit-transition: bottom .25s cubic-bezier(0.0,0.0,0.2,1);
-    transition: bottom .25s cubic-bezier(0.0,0.0,0.2,1);
-    .ovp-caption-text {
-      font-size: 1em;
-      line-height: 1.2em;
-      text-shadow: 2px 2px 2px gray;
-      color: #fff;
-      padding: .1em .3em;
-      user-select: none;
-      word-break: break-word;
-      white-space: pre-line;
-
-    }
+  /* Pulse Shrink */
+  .ovp-button {
+    //display: inline-block;
+    //vertical-align: middle;
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    transition-duration: 0.3s;
+    transition-property: transform;
+  }
+  .ovp-button:hover,
+  .ovp-button:focus,
+  .ovp-button:active {
+    transform: scale(1.1);
   }
 }
 
-.ovp-caption-button {
-  width: 36px;
-}
-
-.ovp-caption-button > i {
-  font-size: 18px;
-  -moz-transition: color .25s cubic-bezier(0.0,0.0,0.2,1);
-  -webkit-transition: color .25s cubic-bezier(0.0,0.0,0.2,1);
-  transition: color .25s cubic-bezier(0.0,0.0,0.2,1);
-}
-
-.ovp-caption-active .ovp-caption-button > i {
-  color: #F36446;
-}
-
-
-
-/*Responsive  */
-
-.ovp-wrapper.ovenplayer.large{
-  font-size : 14px;
-  .ovp-caption-text{
-    font-size : 2em;
-    line-height : 2em;
-  }
-
-}
-.ovp-wrapper.ovenplayer.medium{
-  font-size : 12px;
-  .ovp-caption-text{
-    font-size : 1.4em;
-    line-height : 1.4em;
-  }
-}
-.ovp-wrapper.ovenplayer.small{
-  font-size : 10px;
-  .ovp-caption-text{
-    font-size : 1.4em;
-    line-height : 1.4em;
-  }
-  .ovp-playlist{
-    padding : 1rem;
-
-  }
-
-}
-.ovp-wrapper.ovenplayer.xsmall{
-  font-size : 8px;
-  .ovp-caption-text{
-    font-size : 1.4em;
-    line-height : 1.4em;
-  }
-  .ovp-playlist{
-    padding : 1rem;
-    .ovp-playlist-card{
-      -ms-flex: 0 0 100%;
-      flex: 0 0 100%;
-      max-width: 100%;
-      padding : 0 40px;
-    }
-  }
-
-}
-
-
-/*lowlatency panel*/
-/*not use*/
-/*.ovp-lowlatency-info-panel {
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.ovp-autohide.ovp-live-lowlatency .ovp-lowlatency-info-panel {
-  display: block;
-}
-
-.ovp-autohide.ovp-live-lowlatency.ovp-on-error .ovp-lowlatency-info-panel {
-  display: none;
-}
-
-.ovp-lowlatency-info-container {
-  position: absolute;
-  display: inline-block;
-  top: 25px;
-  left: 30px;
-  padding: 0 15px;
-  background-color: rgba(18,18,28,0.3);
-  animation:fade 2000ms infinite;
-  border-radius: 4px;
-}
-
-.ovp-lowlatency-info-text {
-  display: inline-block;
-  font-size: 14px;
-  line-height: 30px;
-  color: #fff;
-  word-wrap: break-word;
-}
-
-.ovp-lowlatency-info-close{
-  margin-left : 4px;
-}*/
