fix : remove log and css

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -614,13 +614,13 @@
       .ovp-left-controls {
         float: left;
         height: 100%;
-        margin : 10px 0;
+        //margin : 10px 0;
       }
 
       .ovp-right-controls {
         float: right;
         height: 100%;
-        margin : 10px 0;
+        //margin : 10px 0;
       }
 
       /*maybe not use*/
@@ -1210,12 +1210,12 @@
     .ovp-controls{
       height: 30px;
       padding : 0;
-      .ovp-left-controls{
+      /*.ovp-left-controls{
         margin : 0;
       }
       .ovp-right-controls{
         margin : 0;
-      }
+      }*/
     }
   }
   .ovp-ads{
