--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -148,6 +148,8 @@
     display: block;
     height: 100%;
     width: auto;
+    position : relative;
+
     video {
       width: 100%;
       height : 100%;
@@ -167,7 +169,8 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  bottom : 60px;
+  padding-bottom : 60px;
+  top:0;
   &>div{
     position: absolute !important;
     width: 100% !important;
