--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -90,6 +90,7 @@
   font-size: 14px;
   font-weight: 100;
   outline: 0;
+  -webkit-overflow-scrolling: touch;
 
   object{
     width:100%; height:100%;
@@ -623,6 +624,7 @@
       .ovp-right-controls {
         float: right;
         height: 100%;
+        display: inline-flex;
         //margin : 10px 0;
       }
 
