--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -145,11 +145,26 @@
   top: 0;
   height: 100%;
   width : 100%;
+
+
+
+  .ovp-core-ui-wrapper {
+    position : relative;
+    height: 100%;
+  }
+
   .ovp-media-element-container {
-    display: block;
+   /* display: block;
     height: 100%;
     width: auto;
-    position : relative;
+    position : relative;*/
+
+
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
 
     video {
       width: 100%;
@@ -162,6 +177,11 @@
   }
 
   .ovp-ui {
+    /*position : absolute;
+    bottom : 0px;
+    left : 0px;
+    width: 100%;
+    height: 100%;*/
     .ovp-controls-container{}
     .ovp-helpers-container{}
   }
