--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -508,8 +508,13 @@
   width: 100%;
   left: 0;
   height: 100%;
+
+
+
   .ovp-thumbnail-wrapper{
     position: relative;
+    height : 100%;
+    padding: 2.857em;
     img{
       width:100%;
       max-height:100%;
@@ -517,6 +522,19 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+    }
+    .ovp-thumbnail-header{
+      position: relative;
+      left : 0;
+      top : 0;
+      font-size: 2.857em;
+      font-weight: bold;
+      text-shadow: 1px 1px 2px rgba(217,217,217,0.5);
+      &:after{
+        dispaly: block;
+        content: '';
+        clear: both;
+      }
     }
   }
 }
