fix : AD Skip button doesn't hiding when twice playlist playing.

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -774,6 +774,7 @@
   height: 100%;
   //z-index: 31;
   outline: none;
+  margin-top : 10px;
 
   .ovp-play-background-color {
     background-color: #50e3c2;
